# GhostlyShaders

./: .gitignore  README.md  pyproject.toml
ghostly_shaders/: __init__.py  __main__.py  config.py  shaders.py  tui.py
